# gtfs-to-geojson

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENCE.md  README.md
.github/workflows/: publish.yml  tests.yml
src/: converter.rs  lib.rs  main.rs  utility.rs
test/basic/gtfs/: routes.txt  shapes.txt  stop_times.txt  stops.txt  trips.txt
test/data_46/gtfs/: calendar.txt  routes.txt  shapes.txt  stop_times.txt  trips.txt
test/empty_shapes/gtfs/: routes.txt  stops.txt  trips.txt
test/gtfs/gtfs/: agency.txt  calendar_dates.txt  stops.txt
