[package]
name = "gtfs-geojson"
version = "0.3.0"
authors = ["N07070 <social@n07070.xyz>"]
edition = "2018"
description = "A simple converter for GTFS to GeoJSON formats"
readme = "README.md"
repository = "https://gitlab.com/CodeursEnLiberte/gtfs-to-geojson/"
license = "MIT"
keywords = ["gtfs","transport","geojson"]
categories = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

gtfs-structures = "0.27"
geojson = "0.22"
structopt = "0.3"
geo-types = "0.7"
serde_json = "1.0"
